# MORGaN

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  checkpoint.pt  main_graph.py  main_transductive.py  pyproject.toml  requirements.txt  requirements_loc.txt
configs/: alzheimers.yaml  base_config.yaml  cancer_ablations.yaml  configs.yml  edge_ablations.yaml  essential_genes.yaml  feature_ablations.yaml  main_task.yaml  no_pretrain.yaml  ogbn_proteins.yaml  ppi_comparison.yaml  wandb_sweep_mask_alpha.yaml
configs/archive/: configs.yml
modig_results/modig/CPDB_cdgps/: CPDB_label.pkl  CPDB_pred.pkl  CPDB_pred2.pkl  label_all.pkl  pred_all.pkl
morgan/: run_experiments.py  utils.py
morgan/analysis/: __init__.py  bio.py  plots.py
morgan/eval/: evaluation.py  evaluation_multilabel.py
morgan/models/: __init__.py  edcoder.py  gat.py  gcn.py  gin.py  rgcn.py  rgin.py
morgan/multidim_models/: mdmni_network.py  mdmni_train_custom.py  modig_train_custom.py
morgan/training/: gnn_training_utils.py
notebooks/: 00_data_playground.ipynb  01_labels_preprocess.ipynb  02_baselines.ipynb  03_embedding_analysis.ipynb  04_ablations_results.ipynb  04_performance_analysis.ipynb  05_bio_analysis.ipynb  06_explainer.ipynb  07_runtime_analysis.ipynb  08_results_overlap.ipynb  09_alzheimers.ipynb  09_ogbn_proteins.ipynb  labels_preprocess.ipynb  smg_data_analysis.ipynb
results/: 6d_results  mdmni_training.txt  mlp_results.xlsx  poster_results.xlsx
scripts/: run_all_experiments.sh  run_alzheimers.sh  run_cancer_ablations.sh  run_druggable_genes.sh  run_edge_ablations.sh  run_essential_genes.sh  run_feature_ablations.sh  run_no_pretrain.sh  run_ppi_comparison.sh  run_transductive.sh  run_transductive_SMG.sh  run_transductive_ppi_1D.sh  run_transductive_ppi_2D.sh  run_transductive_ppi_3D.sh  run_transductive_ppi_4D.sh  run_transductive_ppi_5D.sh  run_transductive_ppi_6D.sh
scripts/archive/: run_transductive.sh  run_transductive_SMG.sh  run_transductive_ppi_5D.sh
src/: evaluation.py  evaluation_multilabel.py  run_experiments.py  utils.py
src/data/: synthetic_data.py
src/datasets/: build_graphs.py  data_util.py  synthetic_data.py
src/eval/: evaluation.py  evaluation_multilabel.py
src/explainability/: gnn_explainer.py
src/models/: __init__.py  edcoder.py  gat.py  gcn.py  gin.py  rgcn.py  rgin.py
src/modig/: train_modig.py  utils_modig.py
src/multidim_models/: mdmni.py  mdmni_network.py  mdmni_train.py  mdmni_train_custom.py  mdmni_utils.py  modig.py  modig_train.py  modig_train_custom.py  modig_utils.py
src/training/: hparam_sweep.py  train_modig.py
