[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morgan"
version = "0.1.0"
description = "Multi-dimensional GNNs and analysis helpers for druggable genes"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Martina Occhetta" }]
keywords = ["graph-neural-network", "drug-discovery", "bioinformatics", "multi-omics"]

dependencies = [
  "anndata",
  "contourpy",
  "h5py",
  "ipykernel",
  "matplotlib",
  "torch>=2.2,<2.7",
  "networkx",
  "numpy<2.3",
  "pandas",
  "plotly",
  "requests",
  "scanpy",
  "scikit-learn",
  "scipy",
  "seaborn",
  "tqdm",
  "einops",
  "gitdb",
  "gitpython",
  "matplotlib-venn",
  "pydantic",
  "pypalettes",
  "rotary-embedding-torch",
  "sentry-sdk",
  "setproctitle",
  "typing-extensions",
  "wandb",
  "pyyaml",
]

[project.optional-dependencies]
bio = [
  "gseapy>=0.13.0",
  "mygene>=3.2.2",
]
dev = [
  "pytest",
  "black",
  "isort",
  "mypy",
  "ruff",
]

[tool.setuptools]
packages = ["morgan"]
include-package-data = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
